--- a/toppage.html
+++ b/toppage.html
@@ -25,6 +25,7 @@
         document.getElementById('after').innerHTML = log_fortigate.join('<br>') //afterに繰り返し代入されて最後のメッセージのみ残ってしまう。
         
         //aaa
+        //bbbbbb
 
     }
 </script>
