--- a/toppage.html
+++ b/toppage.html
@@ -5,14 +5,13 @@
     <meta charset="uAtf-8">
     <meta name="topページ">
     <title>top page</title>
-    <script scr="JS/SEIKEI.js"></script>
+    <script src="./JS/SEIKEI.js"></script>
 </head>
 
 <body>
     <h1>整形</h1>
             <input type="text" id="FORM_FORTIGATE" name="FORM_FORTIGATE" value='date=2018-12-27 time=11:28:07 logid="0419016384" type="utm" subtype="ips" eventtype="signature" level="alert" vd="vdom1" eventtime=1545938887 severity="info" srcip=172.16.200.55 srccountry="Reserved" dstip=10.1.100.11 srcintf="port11" srcintfrole="undefined" dstintf="port12" dstintfrole="undefined" sessionid=901 action="reset" proto=6 service="HTTP" policyid=1 attack="Eicar.Virus.Test.File" srcport=80 dstport=44362 hostname="172.16.200.55" url="/virus/eicar.com" direction="incoming" attackid=29844 profile="test-ips" ref="http://www.fortinet.com/ids/VID29844" user="bob" incidentserialno=877326946 msg="file_transfer: Eicar.Virus.0 Test.File," '>
-            <input type="button" onclick="SEIKEI_FORTIGATE()" value="fortigate整形"> 
+            <input type="button" onclick="SEIKEI_FORTIGATE()" value="fortigate整形">
         <p id="after"></p>
-
 </body>
 </html>
