LOGの変換表示実装

--- a/top page.html
+++ b/top page.html
@@ -7,24 +7,16 @@
 
 </head>
 <body>
+<!-- フォーム -->
     <input type="text" id="FORM_FORTIGATE" name="FORM_FORTIGATE" value='date=2018-12-27 time=11:28:07 logid="0419016384" type="utm" subtype="ips" eventtype="signature" level="alert" vd="vdom1" eventtime=1545938887 severity="info" srcip=172.16.200.55 srccountry="Reserved" dstip=10.1.100.11 srcintf="port11" srcintfrole="undefined" dstintf="port12" dstintfrole="undefined" sessionid=901 action="reset" proto=6 service="HTTP" policyid=1 attack="Eicar.Virus.Test.File" srcport=80 dstport=44362 hostname="172.16.200.55" url="/virus/eicar.com" direction="incoming" attackid=29844 profile="test-ips" ref="http://www.fortinet.com/ids/VID29844" user="bob" incidentserialno=877326946 msg="file_transfer: Eicar.Virus.Test.File," '>
     <input type="button" onclick="SEIKEI_FORTIGATE()" value="fortigate整形">
     <input type="button" onclick="make_mail" value="メール作成">
 <!--ログ抽出表示-->
     <p id="extract"></p>
 <!--ログ全表示-->
-    <table>
-        <thead>
-          <tr>
-            <td>項目</td>
-            <td>内容</td>
-          </tr>
-        </thead>
-        <tbody id="tbodyID">
-          <!-- ここをループ -->
-        </tbody>
-      </table>
-    <br><br>
+    <ul id="ALL_LOG"></ul>
+  <br>
+  <br>
 <!--メール作成-->
     <label for="FlexTextarea">メール本文</label>
     <div class="FlexTextarea">
@@ -32,8 +24,8 @@
         <textarea id="FlexTextarea" class="FlexTextarea__textarea"></textarea>
     </div>
     
-<script src="./JS/SEIKEI.js"></script>
-<script src="./JS/textarea.js"></script>
+  <script src="./JS/SEIKEI.js"></script>
+  <script src="./JS/textarea.js"></script>
 
 </body>
 </html>
