--- a/top page.html
+++ b/top page.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>top page</title>
     <link rel="stylesheet" href="./CSS/textarea.css">
-
 </head>
 <body>
 <!-- フォーム -->
@@ -23,9 +22,9 @@
         <div class="FlexTextarea__dummy" aria-hidden="true"></div>
         <textarea id="FlexTextarea" class="FlexTextarea__textarea"></textarea>
     </div>
-    
   <script src="./JS/SEIKEI.js"></script>
   <script src="./JS/textarea.js"></script>
+  <script src="JS/mail.js"></script>
 
 </body>
 </html>
