--- a/top page.html
+++ b/top page.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>top page</title>
-    <link rel="stylesheet" href="/CSS/top-page.css">
-    <link rel="stylesheet" href="./CSS/textarea.css">
+    <link rel="stylesheet" href="/CSS/toppage.css">
     
 </head>
 <body>
@@ -16,8 +15,8 @@
     <ul id="event"></ul>
 <!-- ログ整形 -->
     
-    <input type="text" id="FORM_FORTIGATE" name="FORM_FORTIGATE" value='date=2018-12-27 time=11:28:07 logid="0419016384" type="utm" subtype="ips" eventtype="signature" level="alert" vd="vdom1" eventtime=1545938887 severity="info" srcip=172.16.200.55 srccountry="Reserved" dstip=10.1.100.11 srcintf="port11" srcintfrole="undefined" dstintf="port12" dstintfrole="undefined" sessionid=901 action="reset" proto=6 service="HTTP" policyid=1 attack="Eicar.Virus.Test.File" srcport=80 dstport=44362 hostname="172.16.200.55" url="/virus/eicar.com" direction="incoming" attackid=29844 profile="test-ips" ref="http://www.fortinet.com/ids/VID29844" user="bob" incidentserialno=877326946 msg="This is a pen." socccr=asdfasdf bbb="aaa"'>
-    <input type="button" onclick="SEIKEI_FORTIGATE()" value="fortigate整形">
+    <input type="text" id="FORM_FORTIGATE" name="FORM_FORTIGATE" placeholder="fortigate" value='date=2018-12-27 time=11:28:07 logid="0419016384" type="utm" subtype="ips" eventtype="signature" level="alert" vd="vdom1" eventtime=1545938887 severity="info" srcip=172.16.200.55 srccountry="Reserved" dstip=10.1.100.11 srcintf="port11" srcintfrole="undefined" dstintf="port12" dstintfrole="undefined" sessionid=901 action="reset" proto=6 service="HTTP" policyid=1 attack="Eicar.Virus.Test.File" srcport=80 dstport=44362 hostname="172.16.200.55" url="/virus/eicar.com" direction="incoming" attackid=29844 profile="test-ips" ref="http://www.fortinet.com/ids/VID29844" user="bob" incidentserialno=877326946 msg="This is a pen." socccr=asdfasdf bbb="aaa"'>
+    <input type="button" onclick="SEIKEI_FORTIGATE()" value="整形">
     <input type="button" onclick="make_mail" value="メール作成">
     <!--ログ抽出表示-->
     <p id="extract"></p>
@@ -26,10 +25,19 @@
   <br>
   <br>
 <!--メール作成-->
-    <label for="FlexTextarea">メール本文</label>
+    <label for="Mail-area">メール本文</label>
+    <div class="Mail-area">
+        <textarea id="Mail-area"></textarea>
+    </div>
+    <!-- <label for="FlexTextarea">メール本文</label>
     <div class="FlexTextarea">
         <div class="FlexTextarea__dummy" aria-hidden="true"></div>
         <textarea id="FlexTextarea" class="FlexTextarea__textarea"></textarea>
+    </div> -->
+    <div id="container"> <!-- コンテナ -->
+        <div id="itemA">A</div> <!-- アイテム -->
+        <div id="itemB">B</div> <!-- アイテム -->
+        <div id="itemC">C</div> <!-- アイテム -->
     </div>
 <script src="./JS/standard.js"></script>
 <script src="./JS/SEIKEI.js"></script>
