--- a/top page.html
+++ b/top page.html
@@ -14,35 +14,24 @@
     <h3>イベント</h3>
     <ul id="event"></ul>
 <!-- ログ整形 -->
-    
+    <label for="FORM_FORTIGATE">整形用</label>
     <input type="text" id="FORM_FORTIGATE" name="FORM_FORTIGATE" placeholder="fortigate" value='date=2018-12-27 time=11:28:07 logid="0419016384" type="utm" subtype="ips" eventtype="signature" level="alert" vd="vdom1" eventtime=1545938887 severity="info" srcip=172.16.200.55 srccountry="Reserved" dstip=10.1.100.11 srcintf="port11" srcintfrole="undefined" dstintf="port12" dstintfrole="undefined" sessionid=901 action="reset" proto=6 service="HTTP" policyid=1 attack="Eicar.Virus.Test.File" srcport=80 dstport=44362 hostname="172.16.200.55" url="/virus/eicar.com" direction="incoming" attackid=29844 profile="test-ips" ref="http://www.fortinet.com/ids/VID29844" user="bob" incidentserialno=877326946 msg="This is a pen." socccr=asdfasdf bbb="aaa"'>
     <input type="button" onclick="SEIKEI_FORTIGATE()" value="整形">
-    <input type="button" onclick="make_mail" value="メール作成">
+    
     <!--ログ抽出表示-->
-    <p id="extract"></p>
     <!--ログ全表示-->
-    <ul id="ALL_LOG"></ul>
-  <br>
-  <br>
-<!--メール作成-->
-    <label for="Mail-area">メール本文</label>
-    <div class="Mail-area">
-        <textarea id="Mail-area"></textarea>
-    </div>
-    <!-- <label for="FlexTextarea">メール本文</label>
-    <div class="FlexTextarea">
-        <div class="FlexTextarea__dummy" aria-hidden="true"></div>
-        <textarea id="FlexTextarea" class="FlexTextarea__textarea"></textarea>
-    </div> -->
-    <div id="container"> <!-- コンテナ -->
-        <div id="itemA">A</div> <!-- アイテム -->
-        <div id="itemB">B</div> <!-- アイテム -->
-        <div id="itemC">C</div> <!-- アイテム -->
+    <div id="container"> 
+        <div id="div_extract"><p id="extract"></p></div>
+        <div id="div_ALL_LOG"><ul id="ALL_LOG"></ul></div>
+        <div id="div_Mail-area">
+            <label for="Mail-area">メール用</label>
+            <input type="button" onclick="copy()" value="コピー">
+            <br>
+            <textarea id="Mail-area"></textarea>
+        </div>
     </div>
 <script src="./JS/standard.js"></script>
 <script src="./JS/SEIKEI.js"></script>
-<script src="./JS/textarea.js"></script>
-<script src="JS/mail.js"></script>
 
 </body>
 </html>
